--- a/Black Hole/index.html
+++ b/Black Hole/index.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+
+    <div>
+      <a href="https://github.com" class="github-button">
+        <img class="github-icon" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo">
+        Joseph Bkl
+    </a>
+    </div>
+
     <script type="module" src="./js/main.js"></script>
     <script type="module" src="./shaders/canvasFragmentShader.glsl.js"></script>
     <script type="module" src="./shaders/canvasVertexShader.glsl.js"></script>
-
   </body>
 </html>
