--- a/Black Hole/index.html
+++ b/Black Hole/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <div>
-      <a href="https://github.com" class="github-button">
+      <a href="https://github.com/Josephbakulikira/Blackhole-simulation-and-Nbody-simulation" class="github-button">
         <img class="github-icon" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo">
         Joseph Bkl
     </a>
