--- a/2DNbody Simulation/index.html
+++ b/2DNbody Simulation/index.html
@@ -184,6 +184,13 @@
       </div>
     </div>
 
+    <div>
+      <a href="https://github.com/Josephbakulikira/Blackhole-simulation-and-Nbody-simulation" class="github-button">
+        <img class="github-icon" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo">
+        Joseph Bkl-source code
+    </a>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
